Must catch UnsupportedEncodingException.